SM 20210606 Fix dotenv issue. Minor style changes.

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -12,3 +12,19 @@ section {
     max-width: 800px;
     margin: 50px auto;
 }
+
+#errorid {
+    color: red;
+}
+#msgid {
+    color: blue;
+}
+
+#resultsid {
+    margin: 25px 25px 25px 25px;
+    padding: 5px 5px 5px 5px;
+}
+
+.resultitem {
+    padding: 5px 5px 5px 5px;
+}
