--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -3,3 +3,11 @@ header {
     justify-content: space-between;
     padding: 10px 40px;
 }
+
+h1 {
+    font-size: 32px;
+}
+
+h2 {
+    font-size: 26px;
+}
