--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,23 +8,22 @@
     <body>
 
         <header>
-            <div class="">
-                Logo
-            </div>
-            <div class="">
-                navigation
-            </div>
+            <h1>Evaluate News Articles</h1>>
         </header>
 
         <main>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" placeholder="Name">
+                    <input id="name" type="text" name="input" value="" placeholder="Enter URL of the News Article to analyze">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return handleSubmit(event)">
+                    <section>         
+                        <div id="msgid"></div>       
+                        <div id="errorid"></div>
+                    </section>
                 </form>
             </section>
 
-            <section>
+            <section id='resultsid'>
                 <strong>Form Results:</strong>
                 <div id="results"></div>
                 <div id="model"></div>
@@ -34,6 +33,8 @@
                 <div id="confidence"></div>
                 <div id="irony"></div>
             </section>
+
+            
         </main>
 
         <footer>
